# Nginx-FastCGI-CPP

./: Readme.md
Backend/: Back_end_http_server.cpp  Back_end_http_server.h  CMakeLists.txt  db.json  main.cpp  test.fcg
Backend/libraries/fcgi2/libfcgi/: libfcgi.mak
Frontend/: about.css  about.html  brigde_login.html  dilivery.html  exit.html  index.html  iplog.html  local.html  local_out.html  local_out1.html  log_acc.html  log_err.html  login.html  logining_data.txt  logining_template.txt  logins.txt  main.html  make.html  out.html  reg_acc.html  reg_err.html  reg_template.txt  register.html  shop.html  shop_out.html  shop_out1.html  styles.css
Frontend/mobile/: mobile.html  styles.css
Frontend/products/: 1.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
